import shared module in app - make dashboard the default admin view

--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
@@ -1,1 +1,11 @@
-<p>dashboard works!</p>
+<main>
+  <aside>
+    <ul>
+      <li>Buildings</li>
+      <li>Floors</li>
+      <li>Slots</li>
+      <li>Park</li>
+    </ul>
+  </aside>
+  <div class="content"></div>
+</main>
