--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.scss
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.scss
@@ -1,5 +1,54 @@
-main {
-  min-height: 80vh;
-  display: flex;
-  background-color: green;
+.container {
+  min-height: calc(100vh - 64px);
+
+  .sidebar {
+    width: 20%;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    padding: 20px;
+
+    > div {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      background-color: goldenrod;
+    }
+
+    &-nav {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+      > li {
+        width: 100%;
+        padding: 10px;
+        border-radius: 5px;
+        margin-bottom: 10px;
+        cursor: pointer;
+        list-style-type: none;
+        &:hover {
+          background-color: #f5f5f5;
+        }
+      }
+    }
+
+    .collapse {
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      background-color: #f5f5f5;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #e5e5e5;
+      }
+    }
+  }
+
+  .content {
+    background-color: red;
+    min-height: calc(100vh - 64px);
+    padding: 20px;
+    display: block;
+  }
 }
