--- a/packing-frontend/src/app/app.component.html
+++ b/packing-frontend/src/app/app.component.html
@@ -1,2 +1,27 @@
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<app-nav [title]="title" (sideBarToogle)="toogleSideBar()"></app-nav>
+<mat-drawer-container class="container" autosize>
+  <mat-drawer #drawer [opened]="sideBarOpen" class="sidebar" mode="side">
+    <ul class="sidebar-nav">
+      <li>
+        <mat-icon>location_city</mat-icon>
+        <span>Buildings</span>
+      </li>
+      <li>
+        <mat-icon>backup_table</mat-icon>
+        <span>Floors</span>
+      </li>
+      <li>
+        <mat-icon>space_dashboard</mat-icon>
+        <span>Slots</span>
+      </li>
+      <li>
+        <mat-icon>local_parking</mat-icon>
+        <span>Park</span>
+      </li>
+    </ul>
+  </mat-drawer>
+
+  <mat-drawer-content class="content">
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
+</mat-drawer-container>
