--- a/packing-frontend/src/app/shared/components/nav/nav.component.html
+++ b/packing-frontend/src/app/shared/components/nav/nav.component.html
@@ -2,12 +2,12 @@
   <button
     mat-icon-button
     class="example-icon"
-    (click)="openNav()"
+    (click)="toogleSideBar()"
     aria-label="Example icon-button with menu icon"
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>My App</span>
+  <span>{{ title }}</span>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
