--- a/packing-frontend/src/app/shared/components/nav/nav.component.html
+++ b/packing-frontend/src/app/shared/components/nav/nav.component.html
@@ -7,7 +7,9 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>{{ title }}</span>
+  <a class="logo" href="/">
+    <span>{{ title }}</span>
+  </a>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
