--- a/packing-frontend/src/app/shared/components/nav/nav.component.scss
+++ b/packing-frontend/src/app/shared/components/nav/nav.component.scss
@@ -2,6 +2,11 @@
   flex: 1 1 auto;
 }
 
-mat-toolbar{
+mat-toolbar {
   background-color: blueviolet;
+}
+
+.logo {
+  text-decoration: none;
+  color: inherit;
 }
