--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
@@ -1,12 +1,16 @@
+<h1 *ngIf="data">{{ data["title"] }}</h1>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
     <td mat-cell *matCellDef="let element">{{ element.id }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="name">
+  <ng-container *ngIf="data" matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td mat-cell *matCellDef="let element">
+      {{ data["title"] }} {{ element.id }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="weight">
