using sidebar in UserApp

--- a/packing-frontend/src/app/user/components/user-app/user-app.component.html
+++ b/packing-frontend/src/app/user/components/user-app/user-app.component.html
@@ -1,4 +1,5 @@
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<app-nav [title]="title" (sideBarToogle)="toggleSideBar()"></app-nav>
+
+<app-sidebar [routeItems]="routeItems" [sideBarOpen]="sideBarOpen"></app-sidebar>
 
 
