--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
@@ -21,17 +21,20 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element">
-      <button mat-stroked-button [matMenuTriggerFor]="menu">Action</button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>
-          <mat-icon>edit</mat-icon>
-          <span>Edit</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon>delete</mat-icon>
-          <span>Delete</span>
-        </button>
-      </mat-menu>
+      <button
+        mat-icon-button
+        color="primary"
+        aria-label="Example icon button with a delete icon"
+      >
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button
+        mat-icon-button
+        color="primary"
+        aria-label="Example icon button with a delete icon"
+      >
+        <mat-icon>delete</mat-icon>
+      </button>
     </td>
   </ng-container>
 
