--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
@@ -21,18 +21,10 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element">
-      <button
-        mat-icon-button
-        color="primary"
-        aria-label="Example icon button with a delete icon"
-      >
+      <button mat-icon-button (click)="edit(element)" color="primary">
         <mat-icon>edit</mat-icon>
       </button>
-      <button
-        mat-icon-button
-        color="primary"
-        aria-label="Example icon button with a delete icon"
-      >
+      <button mat-icon-button (click)="deleteItem(element)" color="primary">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
