--- a/packing-frontend/src/app/scanner/components/entry/entry.component.html
+++ b/packing-frontend/src/app/scanner/components/entry/entry.component.html
@@ -25,3 +25,21 @@
 </button>
 
 <p *ngIf="NFCErrored">{{ error }}</p>
+
+<!-- table for read cards with serialnumbers and data -->
+<table mat-table [dataSource]="readCards" class="mat-elevation-z8">
+  <!-- Serial Number Column -->
+  <ng-container matColumnDef="serialNumber">
+    <th mat-header-cell *matHeaderCellDef>Serial Number</th>
+    <td mat-cell *matCellDef="let element">{{ element.serialNumber }}</td>
+  </ng-container>
+
+  <!-- Data Column -->
+  <ng-container matColumnDef="data">
+    <th mat-header-cell *matHeaderCellDef>Data</th>
+    <td mat-cell *matCellDef="let element">{{ element.data }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
