--- a/packing-frontend/src/app/user/components/user-dashboard/user-dashboard.component.html
+++ b/packing-frontend/src/app/user/components/user-dashboard/user-dashboard.component.html
@@ -1,37 +1,54 @@
-<mat-card class="mb-3">
-  <mat-card-content>
-    <button mat-raised-button (click)="openDialog()" color="primary" class="mat-elevation-z8">Primary</button>
+<div class="container-fluid">
+  <mat-card class="mb-3 shadow-sm">
+    <mat-card-content>
+      <button mat-raised-button color="primary" (click)="createReservation()">Create Reservation</button>
 
-  </mat-card-content>
+    </mat-card-content>
 
-</mat-card>
+  </mat-card>
 
-<mat-card class="mat-elevation-z8">
-  <mat-card-content>
+  <mat-card class="shadow-sm">
     <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
 
-      <!-- Definieren Sie hier Ihre Spalten -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No.</th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <ng-container matColumnDef="parkingName">
+        <th mat-header-cell *matHeaderCellDef>Parking Name</th>
+        <td mat-cell *matCellDef="let reservation">{{ reservation['parkingName'] }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name</th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <ng-container matColumnDef="building">
+        <th mat-header-cell *matHeaderCellDef>Building</th>
+        <td mat-cell *matCellDef="let reservation">{{ reservation['building'] }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight</th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+      <ng-container matColumnDef="floor">
+        <th mat-header-cell *matHeaderCellDef>Floor</th>
+        <td mat-cell *matCellDef="let reservation">{{ reservation.floor }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol</th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      <ng-container matColumnDef="slotNumber">
+        <th mat-header-cell *matHeaderCellDef>Slot Number</th>
+        <td mat-cell *matCellDef="let reservation">{{ reservation['slotNumber'] }}</td>
       </ng-container>
 
-      <!-- Hier definieren Sie welche Spalten sichtbar sein sollen -->
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let reservation">{{ reservation.date | date }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="time">
+        <th mat-header-cell *matHeaderCellDef>Time</th>
+        <td mat-cell *matCellDef="let reservation">{{ reservation.time }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let reservation">
+          <button mat-icon-button color="warn" (click)="cancelReservation()">
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
@@ -39,8 +56,6 @@
                    showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
-  </mat-card-content>
-</mat-card>
+  </mat-card>
 
-
-
+</div>
