add free slots in floor

--- a/packing-frontend/src/app/user/components/floors/floors.component.html
+++ b/packing-frontend/src/app/user/components/floors/floors.component.html
@@ -1,9 +1,15 @@
 
-<mat-grid-list gutterSize="10px" cols="1" rowHeight="100px" class="mt-5">
+<mat-grid-list gutterSize="20px" cols="4" rowHeight="220px" class="mt-5">
   <ng-container *ngIf="tiles.length > 0; else noItemsTemplate">
     <mat-grid-tile *ngFor="let item of tiles">
       <div class="card">
         <h5 class="card-title text-center">{{item.text}}</h5>
+        <div class="card-content text-center">
+          <div > Free: {{item.free}}</div >
+          <div > Women: {{item.frauen}}</div>
+          <div > E-Cars: {{item.eAuto}}</div>
+          <div > Disability: {{item.disability}}</div >
+        </div>
       </div>
     </mat-grid-tile>
   </ng-container>
