--- a/packing-frontend/src/app/user/components/slot/slot.component.scss
+++ b/packing-frontend/src/app/user/components/slot/slot.component.scss
@@ -1,4 +1,3 @@
-
 .card:hover {
   transform: translateY(-9px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -49,4 +48,8 @@
 .card-green {
   background-color: green;
   color: white;
+}
+
+.slot-container {
+  cursor: pointer;
 }
