--- a/packing-frontend/src/app/shared/components/nav/nav.component.html
+++ b/packing-frontend/src/app/shared/components/nav/nav.component.html
@@ -11,7 +11,7 @@
     <span>{{ title }}</span>
   </a>
   <span class="example-spacer"></span>
-  <button
+<!--  <button
     mat-icon-button
     class="example-icon favorite-icon"
     aria-label="Example icon-button with heart icon"
@@ -24,5 +24,5 @@
     aria-label="Example icon-button with share icon"
   >
     <mat-icon>share</mat-icon>
-  </button>
+  </button>-->
 </mat-toolbar>
