fix content height

--- a/packing-frontend/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/packing-frontend/src/app/shared/components/sidebar/sidebar.component.scss
@@ -44,7 +44,7 @@
   }
 
   .content {
-    min-height: calc(100vh - 64px);
+    height: calc(100vh - 64px);
     padding: 20px;
     display: block;
   }
