get parks from backend using API

--- a/packing-frontend/src/app/user/components/parks/parks.component.html
+++ b/packing-frontend/src/app/user/components/parks/parks.component.html
@@ -2,12 +2,12 @@
   <ng-container *ngIf="tiles.length > 0; else noItemsTemplate">
     <mat-grid-tile *ngFor="let item of tiles">
       <div class="card">
-        <h5 class="card-title text-center">{{item.text}}</h5>
-        <p class="card-text text-center"> {{item.building}}</p>
+        <h5 class="card-title text-center">{{item.name}}</h5>
+<!--        <p class="card-text text-center"> {{item.building}}</p>-->
       </div>
     </mat-grid-tile>
   </ng-container>
   <ng-template #noItemsTemplate>
-    <h2 class="card-title text-center">No Buildings to display.</h2>
+    <h2 class="card-title text-center">No Park to display.</h2>
   </ng-template>
 </mat-grid-list>
