--- a/packing-frontend/src/app/admin/components/parks/parks.component.html
+++ b/packing-frontend/src/app/admin/components/parks/parks.component.html
@@ -23,12 +23,12 @@
 
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>Created At</th>
-        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'dd.mm.yyy'}}</td>
+        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
       </ng-container>
 
       <ng-container matColumnDef="updatedAt">
         <th mat-header-cell *matHeaderCellDef>updatedAt</th>
-        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'dd.mm.yyy' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
@@ -36,6 +36,9 @@
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button (click)="edit(element)" color="primary">
             <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="show(element)" color="primary">
+            <mat-icon>remove_red_eye</mat-icon>
           </button>
         </td>
       </ng-container>
