--- a/packing-frontend/src/app/admin/components/reservations/reservations.component.html
+++ b/packing-frontend/src/app/admin/components/reservations/reservations.component.html
@@ -1,12 +1,11 @@
-<p>reservations works!</p>
 <div class="container-fluid overflow-auto">
   <mat-card class="mb-3 shadow-sm">
     <mat-card-header class="text-center">
       <mat-card-title class="h1 text-center" style="font-size: 32px;">Parks</mat-card-title>
     </mat-card-header>
     <mat-card-actions>
-      <button mat-raised-button color="primary" (click)="create()">Add Park</button>
-      <button mat-raised-button color="primary" class="mx-3">Export Parks</button>
+      <button mat-raised-button color="primary" (click)="create()">Add Reservation</button>
+      <button mat-raised-button color="primary" class="mx-3">Export Reservations</button>
     </mat-card-actions>
   </mat-card>
 
@@ -19,22 +18,22 @@
 
       <ng-container matColumnDef="from">
         <th mat-header-cell *matHeaderCellDef>From</th>
-        <td mat-cell *matCellDef="let element">{{ element['reservationFrom'] | date:'dd.MM.yyy hh:mm:ss'}}</td>
+        <td mat-cell *matCellDef="let element">{{ element['reservationFrom'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
       </ng-container>
 
       <ng-container matColumnDef="to">
         <th mat-header-cell *matHeaderCellDef>To</th>
-        <td mat-cell *matCellDef="let element">{{ element['reservationTo']| date:'dd.MM.yyy hh:mm:ss' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element['reservationTo']| date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>Created At</th>
-        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'dd.MM.yyy hh:mm:ss'}}</td>
+        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
       </ng-container>
 
       <ng-container matColumnDef="updatedAt">
         <th mat-header-cell *matHeaderCellDef>updatedAt</th>
-        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'dd.MM.yyy hh:mm:ss' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
@@ -42,6 +41,9 @@
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button (click)="edit(element)" color="primary">
             <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="show(element)" color="primary">
+            <mat-icon>remove_red_eye</mat-icon>
           </button>
         </td>
       </ng-container>
