--- a/packing-frontend/src/app/admin/components/users/users.component.html
+++ b/packing-frontend/src/app/admin/components/users/users.component.html
@@ -4,8 +4,8 @@
       <mat-card-title class="h1 text-center" style="font-size: 32px;">Parks</mat-card-title>
     </mat-card-header>
     <mat-card-actions>
-      <button mat-raised-button color="primary" (click)="create()">Add Park</button>
-      <button mat-raised-button color="primary" class="mx-3">Export Parks</button>
+      <button mat-raised-button color="primary" (click)="create()">Add User</button>
+      <button mat-raised-button color="primary" class="mx-3">Export Users</button>
     </mat-card-actions>
   </mat-card>
 
@@ -33,12 +33,12 @@
 
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>Created At</th>
-        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'dd.mm.yyy'}}</td>
+        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
       </ng-container>
 
       <ng-container matColumnDef="updatedAt">
         <th mat-header-cell *matHeaderCellDef>updatedAt</th>
-        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'dd.mm.yyy' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
@@ -46,6 +46,9 @@
         <td mat-cell *matCellDef="let element">
           <button mat-icon-button (click)="edit(element)" color="primary">
             <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="show(element)" color="primary">
+            <mat-icon>remove_red_eye</mat-icon>
           </button>
         </td>
       </ng-container>
