--- a/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
+++ b/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
@@ -1,15 +1,10 @@
-<div class="container-fluid overflow-auto">
-  <mat-card class="mb-3 shadow-sm">
-    <mat-card-header class="text-center">
-      <mat-card-title class="h1 text-center" style="font-size: 32px;">Parks</mat-card-title>
-    </mat-card-header>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" (click)="create()">Add NCF-Card</button>
-      <button mat-raised-button color="primary" class="mx-3">Export NCF-Cards</button>
-    </mat-card-actions>
-  </mat-card>
-
-  <mat-card class="shadow-sm">
+<mat-card class="mb-3 shadow">
+  <mat-card-title class="h1 text-center mt-3">NFS-Cards</mat-card-title>
+  <mat-card-actions>
+    <button mat-raised-button color="primary" (click)="create()">Add NCF-Card</button>
+    <button mat-raised-button color="primary" class="mx-3">Export NCF-Cards</button>
+  </mat-card-actions>
+  <mat-card-content>
     <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>No.</th>
@@ -65,5 +60,5 @@
                    showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
-  </mat-card>
-</div>
+  </mat-card-content>
+</mat-card>
