--- a/packing-frontend/src/app/admin/components/parks/parks.component.html
+++ b/packing-frontend/src/app/admin/components/parks/parks.component.html
@@ -1,36 +1,27 @@
-<div class="container-fluid overflow-auto">
-  <mat-card class="mb-3 shadow-sm">
-    <mat-card-header class="text-center">
-      <mat-card-title class="h1 text-center" style="font-size: 32px;">Parks</mat-card-title>
-    </mat-card-header>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" (click)="create()">Add Park</button>
-      <button mat-raised-button color="primary" class="mx-3">Export Parks</button>
-    </mat-card-actions>
-  </mat-card>
-
-  <mat-card class="shadow-sm">
+<mat-card class="shadow">
+  <mat-card-title class="h1 text-center mt-3">Parks</mat-card-title>
+  <mat-card-actions>
+    <button mat-raised-button color="primary" (click)="create()">Add Park</button>
+    <button mat-raised-button color="primary" class="mx-3">Export Parks</button>
+  </mat-card-actions>
+  <mat-card-content>
     <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>No.</th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
-
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
-
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>Created At</th>
         <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
       </ng-container>
-
       <ng-container matColumnDef="updatedAt">
         <th mat-header-cell *matHeaderCellDef>updatedAt</th>
         <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
-
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
@@ -50,5 +41,5 @@
                    showFirstLastButtons
                    aria-label="Select page of periodic elements">
     </mat-paginator>
-  </mat-card>
-</div>
+  </mat-card-content>
+</mat-card>
