--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.scss
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.scss
@@ -1,4 +1,35 @@
-.container-fluid{
-  overflow-y: scroll;
+.card {
+  width: 300px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  padding: 20px;
+  border-color: #4343ff;
 }
 
+.card:hover {
+  transform: translateY(-9px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+
+.card-content {
+  padding: 20px;
+}
+
+.card-title {
+  font-size: 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  padding: 5px;
+  color: #fff;
+  background-color: #4343ff;
+
+}
+
+.card-text {
+  font-size: 16px;
+  color: #666;
+}
