--- a/packing-frontend/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/packing-frontend/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 .sidenav-container {
   left: -10px;
   .sidebar {
-    width: 15%;
+    width: 200px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
     padding: 20px;
     min-height: calc(100vh - 64px);
