--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <mat-card class="shadow">
   <mat-card-title class="text-center mt-3">Dashboard</mat-card-title>
   <mat-card-content>
-    <mat-grid-list [cols]="myBreakPoint" gutterSize="10px" cols="4" rowHeight="150px" class="mt-5"
+    <mat-grid-list [cols]="myBreakPoint" gutterSize="15px" cols="4" rowHeight="150px"
                    (window:resize)="handleSize($event)">
       <ng-container>
         <mat-grid-tile>
-          <div class="card">
+          <div class="card" (click)="onClickCard('parks')">
             <h5 class="card-title text-center">Parks</h5>
             <p class="card-text text-center">5</p>
           </div>
@@ -13,7 +13,7 @@
       </ng-container>
       <ng-container>
         <mat-grid-tile>
-          <div class="card">
+          <div class="card" (click)="onClickCard('buildings')">
             <h5 class="card-title text-center">Buildings</h5>
             <p class="card-text text-center">10</p>
           </div>
@@ -21,7 +21,7 @@
       </ng-container>
       <ng-container>
         <mat-grid-tile>
-          <div class="card">
+          <div class="card" (click)="onClickCard('slots')">
             <h5 class="card-title text-center">Slots</h5>
             <p class="card-text text-center">1000</p>
           </div>
@@ -29,7 +29,7 @@
       </ng-container>
       <ng-container>
         <mat-grid-tile>
-          <div class="card">
+          <div class="card" (click)="onClickCard('users')">
             <h5 class="card-title text-center">Users</h5>
             <p class="card-text text-center">600</p>
           </div>
@@ -43,9 +43,8 @@
         <button mat-raised-button color="primary" (click)="onWeek()">Week</button>
         <button mat-raised-button color="primary" (click)="onMonth()" class="mx-3">Month</button>
       </div>
-      <div class="d-flex justify-content-center">Text</div>
       <div class="text-center">
-        <canvas id="canvas" style="height:45vh; width:100vw">{{chart}}</canvas>
+        <canvas id="canvas" style="height:55vh; width:100vw">{{chart}}</canvas>
       </div>
     </ng-container>
   </mat-card-content>
