--- a/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
+++ b/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
@@ -11,18 +11,18 @@
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="cardNumber">
-        <th mat-header-cell *matHeaderCellDef>cardNumber</th>
-        <td mat-cell *matCellDef="let element">{{ element['name'] }}</td>
+      <ng-container matColumnDef="serialNumber">
+        <th mat-header-cell *matHeaderCellDef>Serial-Number</th>
+        <td mat-cell *matCellDef="let element">{{ element['serialNumber'] }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="validFrom">
-        <th mat-header-cell *matHeaderCellDef>validFrom</th>
+      <ng-container matColumnDef="nfcFrom">
+        <th mat-header-cell *matHeaderCellDef>nfcFrom</th>
         <td mat-cell *matCellDef="let element">{{ element['nfcFrom'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="validTo">
-        <th mat-header-cell *matHeaderCellDef>validTo</th>
+      <ng-container matColumnDef="nfcTo">
+        <th mat-header-cell *matHeaderCellDef>nfcTo</th>
         <td mat-cell *matCellDef="let element">{{ element['nfcTo'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
 
