--- a/packing-frontend/src/app/admin/components/parks/parks.component.html
+++ b/packing-frontend/src/app/admin/components/parks/parks.component.html
@@ -1,11 +1,29 @@
+<!--<div class="loading-container" *ngIf="this.dataSource.data.length == 0">
+  <mat-card class="shadow mat-card">
+    <mat-card-content>
+      <div class="spinner-border text-primary" role="status" style="width: 7rem; height: 7rem;">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>-->
+
+<!--<mat-card class="shadow" *ngIf="this.dataSource.data.length != 0">-->
 <mat-card class="shadow">
   <mat-card-title class="h1 text-center mt-3">Parks</mat-card-title>
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="create()">Add Park</button>
     <button mat-raised-button color="primary" class="mx-3">Export Parks</button>
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+    </mat-form-field>
   </mat-card-actions>
   <mat-card-content>
-    <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
+<!--    <div class="spinner-border text-primary" role="status" style="width: 7rem; height: 7rem;">
+      <span class="sr-only">Loading...</span>
+    </div>-->
+    <table mat-table [dataSource]="dataSource" class="table table-hover table-striped" matSort>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>No.</th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
@@ -37,9 +55,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
+    <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="5"></mat-paginator>
   </mat-card-content>
 </mat-card>
