--- a/packing-frontend/src/app/admin/components/users/users.component.html
+++ b/packing-frontend/src/app/admin/components/users/users.component.html
@@ -3,6 +3,10 @@
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="create()">Add User</button>
     <button mat-raised-button color="primary" class="mx-3">Export Users</button>
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+    </mat-form-field>
   </mat-card-actions>
 
   <mat-card-content class="shadow-sm">
