--- a/packing-frontend/src/app/user/components/floors/floors.component.html
+++ b/packing-frontend/src/app/user/components/floors/floors.component.html
@@ -1,21 +1,24 @@
-
-<mat-grid-list gutterSize="20px" cols="4" rowHeight="220px" class="mt-5">
-  <ng-container *ngIf="tiles.length > 0; else noItemsTemplate">
-    <mat-grid-tile *ngFor="let item of tiles">
-      <div class="card">
-        <h5 class="card-title text-center">{{item.text}}</h5>
-        <div class="card-content text-center">
-          <div > Free: {{item.free}}</div >
-          <div > Women: {{item.frauen}}</div>
-          <div > E-Cars: {{item.eAuto}}</div>
-          <div > Disability: {{item.disability}}</div >
-        </div>
-      </div>
-    </mat-grid-tile>
-  </ng-container>
-  <ng-template #noItemsTemplate>
-    <h2 class="card-title text-center">No Buildings to display.</h2>
-  </ng-template>
-</mat-grid-list>
-
-
+<mat-card>
+  <mat-card-title class="text-center mt-3">Floors</mat-card-title>
+  <mat-card-content>
+    <mat-grid-list gutterSize="25px" rowHeight="165px" [cols]="myBreakPoint" (window:resize)="handleSize($event)">
+      <ng-container *ngIf="floors.length > 0; else noItemsTemplate">
+        <mat-grid-tile *ngFor="let item of floors">
+          <div class="card">
+            <h5 class="card-title text-center">{{item.name}}</h5>
+            <div class="card-content text-center">
+              <div>Slots: {{item['slotsCount']}}</div>
+              <!--<div > Free: {{item.free}}</div >
+              <div > Women: {{item.frauen}}</div>
+              <div > E-Cars: {{item.eAuto}}</div>
+              <div > Disability: {{item.disability}}</div >-->
+            </div>
+          </div>
+        </mat-grid-tile>
+      </ng-container>
+      <ng-template #noItemsTemplate>
+        <h2 class="card-title text-center">No Floors to display.</h2>
+      </ng-template>
+    </mat-grid-list>
+  </mat-card-content>
+</mat-card>
