--- a/packing-frontend/src/app/user/components/building/building.component.html
+++ b/packing-frontend/src/app/user/components/building/building.component.html
@@ -3,7 +3,7 @@
   <mat-card-content>
     <mat-grid-list gutterSize="25px" rowHeight="180px" [cols]="myBreakPoint" (window:resize)="handleSize($event)">
       <ng-container *ngIf="buildings.length > 0; else noItemsTemplate">
-        <mat-grid-tile *ngFor="let item of buildings">
+        <mat-grid-tile *ngFor="let item of buildings" (click)="onClickBuilding(item.id)">
           <div class="card">
             <h5 class="card-title text-center">{{item.name}}</h5>
             <p class="card-text text-center">Address:
