add pagination to parks, buildings, floors and slots

--- a/packing-frontend/src/app/user/components/floors/floors.component.html
+++ b/packing-frontend/src/app/user/components/floors/floors.component.html
@@ -2,8 +2,8 @@
   <mat-card-title class="text-center mt-3">Floors</mat-card-title>
   <mat-card-content>
     <mat-grid-list gutterSize="25px" rowHeight="165px" [cols]="myBreakPoint" (window:resize)="handleSize($event)">
-      <ng-container *ngIf="floors.length > 0; else noItemsTemplate">
-        <mat-grid-tile *ngFor="let item of floors" (click)="onClickFloor(item.id)">
+      <ng-container *ngIf="pagedFloors.length > 0; else noItemsTemplate">
+        <mat-grid-tile *ngFor="let item of pagedFloors" (click)="onClickFloor(item.id)">
           <div class="card">
             <h5 class="card-title text-center">{{item.name}}</h5>
             <div class="card-content text-center">
@@ -20,5 +20,7 @@
         <h2 class="card-title text-center">No Floors to display.</h2>
       </ng-template>
     </mat-grid-list>
+    <!-- Pagination -->
+    <mat-paginator [pageSizeOptions]="[8, 12, 16]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
