--- a/packing-frontend/src/app/user/components/slot/slot.component.html
+++ b/packing-frontend/src/app/user/components/slot/slot.component.html
@@ -3,8 +3,8 @@
   <mat-card-content>
     <mat-grid-list [cols]="myBreakPoint" gutterSize="30px" cols="4" rowHeight="150px"
                    (window:resize)="handleSize($event)">
-      <ng-container *ngIf="slots.length > 0; else noItemsTemplate">
-        <mat-grid-tile *ngFor="let item of slots">
+      <ng-container *ngIf="pagedSlots.length > 0; else noItemsTemplate">
+        <mat-grid-tile *ngFor="let item of pagedSlots">
           <div class="card" (click)="onSelect(item)">
             <h5 class="card-title text-center">{{item.name}}</h5>
             <div class="card-content text-center">
@@ -17,5 +17,7 @@
         <h2 class="card-title text-center">No Slots to display.</h2>
       </ng-template>
     </mat-grid-list>
+    <!-- Pagination -->
+    <mat-paginator [pageSizeOptions]="[8, 12, 16]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
