--- a/packing-frontend/src/app/admin/components/add-building-dialog/add-building-dialog.component.html
+++ b/packing-frontend/src/app/admin/components/add-building-dialog/add-building-dialog.component.html
@@ -9,7 +9,7 @@
       <mat-error *ngIf="dialogForm.controls['park'].invalid">Park is required</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input matInput formControlName="name" placeholder="Name of Park" required>
+      <input matInput formControlName="name" placeholder="Name of Building" required>
       <mat-error *ngIf="dialogForm.controls['name'].invalid">Name is required</mat-error>
     </mat-form-field>
   </form>
