--- a/packing-frontend/src/app/admin/components/add-park-dialog/add-park-dialog.component.html
+++ b/packing-frontend/src/app/admin/components/add-park-dialog/add-park-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Add User</h2>
+<h2 mat-dialog-title>Add Park</h2>
 <mat-dialog-content>
   <form [formGroup]="dialogForm" (ngSubmit)="onSubmit()" #formDir="ngForm" novalidate>
     <mat-form-field>
