--- a/packing-frontend/src/app/admin/components/floors/floors.component.html
+++ b/packing-frontend/src/app/admin/components/floors/floors.component.html
@@ -1,7 +1,8 @@
 <mat-card class="shadow">
   <mat-card-title class="text-center mt-3">Floor</mat-card-title>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="exportBuildings()" class="mx-3">Export Floors</button>
+    <a mat-raised-button color="primary" (click)="exportFloors()" class="mx-3"
+            [href]="downloadJsonHref" download="floors.json">Export Floors</a>
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Floor</button>
     <mat-form-field appearance="fill">
       <mat-label>Search Building</mat-label>
